--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <!-- Bootstrap css -->
   <link rel="stylesheet" href="bootstrap-4.6.0/css/bootstrap.min.css">
+  <!-- website icon -->
   <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png">
-
+  <!-- Icon library -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <!-- jQuery and Bootstrap Javascript -->
   <script src="jquery-3.5.1.slim.min.js"></script>
   <script src="bootstrap-4.6.0/js/bootstrap.min.js"></script>
-
+  
   <title>Luloy.web</title>
   
-  <!-- React -->
+  <!-- System js -->
   <script src="//unpkg.com/systemjs@0.19.47/dist/system.js"></script>
-  
 </head>
 
 <body>
@@ -57,7 +59,7 @@
   </div>
 </nav>
   <div id="content">
-   <span class="spinner-border spinner-border-lg"></span></div>
+   <span class=" spinner-border spinner-border-lg"></span></div>
   <!-- Project -->
   <script src="config.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
