--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <title>Luloy.web</title>
   
-  <!-- System js -->
+  <!-- System -->
   <script src="//unpkg.com/systemjs@0.19.47/dist/system.js"></script>
 </head>
 
@@ -33,10 +33,10 @@
         <a class="nav-link" data-route="home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-route="about">About <span class="sr-only">(current)</span></a>
+        <a class="nav-link" data-route="about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-route="devs">Developers <span class="sr-only">(current)</span></a>
+        <a class="nav-link" data-route="devs">Customers</a>
       </li>
       <!--<li class="nav-item">
         <a class="nav-link" href="#">Link</a>
