--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <a class="nav-link" data-route="about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-route="devs">Customers</a>
+        <a class="nav-link" data-route="devs">Developers</a>
       </li>
       <!--<li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>-->
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Customers</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
