--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- jQuery and Bootstrap Javascript -->
   <script src="jquery-3.5.1.slim.min.js"></script>
   <script src="bootstrap-4.6.0/js/bootstrap.min.js"></script>
-  
+  <link rel="stylesheet" href="index.css">
   <title>Luloy.web</title>
   
   <!-- System -->
@@ -59,7 +59,10 @@
   </div>
 </nav>
   <div id="content">
-   <span class=" spinner-border spinner-border-lg"></span></div>
+   <div id="loading">
+   <div id="spin" class="spinner spinner-border">
+   </div>
+   </div>
   <!-- Project -->
   <script src="config.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
