--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
   </div>
 </nav>
   <div id="content">
-   <div id="loading">
-   <div id="spin" class="spinner spinner-border">
-   </div>
+   <div id="spin" class="loader">
    </div>
   <!-- Project -->
   <script src="config.js"></script>
