--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light" id="nav">
   <img src="./assets/logo.png" alt="logo" height="50px"/>
   <button class="navbar-toggler btn" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
   </div>
 </nav>
   <div id="content">
-   <div id="spin" class="loader">
+   <div class="loader spin">
    </div>
   <!-- Project -->
   <script src="config.js"></script>
