--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
   <div class="collapse navbar-collapse" id="navbarsExample03">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="">
         <a class="nav-link" data-route="home">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="">
         <a class="nav-link" data-route="about">About</a>
       </li>
-      <li class="nav-item">
+      <li class="">
         <a class="nav-link" data-route="devs">Developers</a>
       </li>
       <!--<li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>-->
-      <li class="nav-item">
+      <li class="">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Customers</a>
       </li>
       <li class="nav-item dropdown">
