--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="bootstrap-4.6.0/css/bootstrap.min.css">
   <!-- website icon -->
   <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png">
@@ -21,8 +22,10 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light" id="nav">
+<nav class="navbar shadow-lg fixed-top navbar-expand-sm navbar-light bg-light" id="nav">
+ <a class="nav-brand t" href="">
   <img src="./assets/logo.png" alt="logo" height="50px"/>
+ </a>
   <button class="navbar-toggler btn" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -54,7 +57,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-md-0">
-      <input class="form-control" type="text" placeholder="Search">
+      <input disabled class=" form-control" type="text" placeholder="Search">
     </form>
   </div>
 </nav>
@@ -64,6 +67,6 @@
   <!-- Project -->
   <script src="config.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+
 </body>
 </html>
