--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 <nav class="navbar shadow-lg fixed-top navbar-expand-sm navbar-light bg-light" id="nav">
- <a class="nav-brand t" href="">
+ <a class="nav-brand " href="">
   <img src="./assets/logo.png" alt="logo" height="50px"/>
  </a>
   <button class="navbar-toggler btn" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,8 +61,10 @@
     </form>
   </div>
 </nav>
-  <div id="content">
-   <div class="loader spin">
+<div id="loadingContent">
+ <div class="loader spin"></div>
+</div>
+  <div hidden id="content">
    </div>
   <!-- Project -->
   <script src="config.js"></script>
