--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="jquery-3.5.1.slim.min.js"></script>
   <script src="bootstrap-4.6.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="index.css">
-  <title>Luloy.web</title>
+  <title>Luloy</title>
   
   <!-- System -->
   <script src="//unpkg.com/systemjs@0.19.47/dist/system.js"></script>
