--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     </form>
   </div>
 </nav>
+<div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+  <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+</div>
 <div id="loadingContent">
  <div class="loader spin"></div>
 </div>
