--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" data-route="about"><span class="bi-journals"></span> About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" data-route="lol"> <span></span>Lol</a>
+          <a class="nav-link disabled" data-route="lol"> <span class="bi-shield-check-fill"></span> Admin Panel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#demo"><span class="bi-person-fill-gear" ></span> Account</a>
