--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -60,7 +60,7 @@
    </ul>
 <div class="m-1 form-check form-switch">
   <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode">
-  <label class="form-check-label" for="mySwitch" checked> Dark mode</label>
+  <label class="form-check-label" for="mySwitch"> Dark mode</label>
 </div>
   </div>
 </div>
