--- a/test.html
+++ b/test.html
@@ -11,13 +11,16 @@
 
 <div class="container mt-3">
   <h3>Tooltip Example</h3>
-  
+    <button type="button" class="btn btn-primary" data-bs-toggle="tooltip" title="Hooray!">
+    Hover over me!
+  </button>
 
 </div>
 
 <script>
 // Initialize tooltips
 var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+console.log(tooltipTriggerList)
 var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
   return new bootstrap.Tooltip(tooltipTriggerEl)
 })
