--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" data-route="about"><span class="bi-journals"></span> About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" data-route="lol"> <span class="bi-shield-fill-check"></span> Admin Panel</a>
+          <a class="nav-link disabled" data-route="admin_panel"> <span class="bi-shield-fill-check"></span> Admin Panel</a>
         </li>
       </ul>
     </div>
@@ -46,19 +46,19 @@
   <div class="offcanvas offcanvas-start navbar-light" id="sidebar">
   <div class="offcanvas-header">
    <img src="/assets/profile.png" alt="logo" id="sidebarprof">
-    <h1 class="offcanvas-title">Jhon Doe</h1>
+    <h1 class="offcanvas-title">Reymart Centeno</h1>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
   </div>
   <div class="offcanvas-body">
    <ul class="navbar-nav">
      <li class="nav-item">
-       <a class="nav-link disabled p-1 m-1 rounded" data-route="devs"><span class="bi-person"></span> Profile</a>
+       <a name="Profile" class="nav-link dis-link p-1 m-1 rounded"><span class="bi-person"></span> Profile</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link disabled p-1 m-1 rounded" data-route="devs"><span class="bi-nut"></span> Settings</a>
+       <a name="Settings" class="nav-link dis-link p-1 m-1 rounded"><span class="bi-nut"></span> Settings</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link disabled p-1 m-1 rounded " data-route="devs"><span class="bi-currency-dollar"></span> Billing</a>
+       <a name="Billing" class="nav-link dis-link p-1 m-1 rounded" ><span class="bi-currency-dollar"></span> Billing</a>
      </li>
    </ul>
 <div class="m-1 form-check form-switch">
