--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="offcanvas offcanvas-start navbar-light" id="sidebar">
   <div class="offcanvas-header">
    <img src="/assets/profile.png" alt="logo" id="sidebarprof">
-    <h1 class="offcanvas-title"> Reymart Centeno</h1>
+    <h1 class="offcanvas-title"> user?</h1>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
   </div>
   <div class="offcanvas-body">
