--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode">
   <label class="form-check-label" for="mySwitch"> Dark mode</label>
 </div>
-<h4 class="m-1 p-1"><span class="bi-bell-fill"></span> Notifications: </h4>
-<div id="notif-sec" class="column">
+<h4 class="m-1 p-1"><span class="notif bi-bell-fill"></span> Notifications: </h4>
+<div id="notif-sec" class="column border">
  <!-- Notifcations here -->
 </div>
   </div>
