--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <nav class="navbar navbar-expand-sm navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" data-bs-toggle="offcanvas" data-bs-target="#sidebar">
-     <img id="logo" src="/assets/profile.png" alt="logo">
+     <img id="logo" src="/assets/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -45,8 +45,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <div class="offcanvas offcanvas-start navbar-light" id="sidebar">
   <div class="offcanvas-header">
-   <img src="/assets/profile.png" alt="logo" id="sidebarprof">
-    <h1 class="offcanvas-title"> user?</h1>
+   <img src="/assets/logo.png" alt="logo" id="sidebarprof">
+    <h1 class="offcanvas-title"> Luloy</h1>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
   </div>
   <div class="offcanvas-body">
