--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" data-route="home"><span class="bi-house"></span> Home</a>
+          <a class="active" data-route="home"><span class="bi-house"></span> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-route="about"><span class="bi-journals"></span> About</a>
+          <a class="" data-route="about"><span class="bi-journals"></span> About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" data-route="admin_panel"> <span class="bi-shield-fill-check"></span> Admin Panel</a>
