--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <label class="form-check-label" for="mySwitch"> Dark mode</label>
 </div>
 <h4 class="m-1 p-1"><span class="notif bi-bell-fill"></span> Notifications: </h4>
-<div id="notif-sec" class="column border">
+<div id="notif-sec" class="column">
  <!-- Notifcations here -->
 </div>
   </div>
