--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <div class="offcanvas offcanvas-start navbar-light" id="sidebar">
   <div class="offcanvas-header">
-   <img src="/assets/logo.png" alt="logo" id="sidebarprof">
-    <h1 class="offcanvas-title"> Luloy</h1>
+  <!-- <img src="/assets/logo.png" alt="logo" id="sidebarprof"> -->
+    <h1 class="offcanvas-title">Menu</h1>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
   </div>
   <div class="offcanvas-body">
